# py-vector

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  _alias_tracker.py  _csv.py  _display.py  _naming.py  _typeutils.py  backup.py  pull_request_template.md  py_struct.py  py_svd_ryan.py  py_table.py  py_vector.py  py_vetor.py  pyproject.toml  test_code.py  thoughts.txt
dev/: backup.py  extra.txt  py_householder_svd.py  py_svd.py
docs/: aliasing.md  design-philosophy.md  development.md  exceptions.md  indexing.md  invariants.md  joins-aggregations.md  naming.md  performance.md  pyvector-vs-python.md  rationale.md  repr.md  serif-vs-python.md  table-model.md  vector-semantics.md
testing/: README.md  test_aggregate_regression.py  test_aggregate_window.py  test_exceptions.py  test_fingerprint.py  test_joins.py  test_list_migration.py  test_method_proxy.py  test_pydate.py  test_pyint.py  test_pystring.py  test_pytable.py  test_pytest.py  test_pyvector_basic.py  test_pyvector_math.py  test_pyvector_naming.py  test_renaming.py  test_sanitize_name.py
tests/: test_aggregate_regression.py  test_aggregate_sort_order.py  test_aggregate_window.py  test_column_rename_dotaccess.py  test_exceptions.py  test_fingerprint.py  test_joins.py  test_method_proxy.py  test_pydate.py  test_pyfloat.py  test_pyint.py  test_pystring.py  test_pytable.py  test_pyvector_basic.py  test_pyvector_indexing.py  test_pyvector_math.py  test_pyvector_naming.py  test_renaming.py  test_sanitize_name.py  test_table_arithmetic_naming.py  (+5 more)
(+40 files in other folders)
