[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-vector"
version = "0.1.0"
description = "A Pythonic, zero-dependency vector and table library for interactive data exploration"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Ryan Larsen"}
]
keywords = ["vector", "table", "data", "analysis", "dataframe", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/CIG-GitHub/py-vector"
Repository = "https://github.com/CIG-GitHub/py-vector"
"Bug Tracker" = "https://github.com/CIG-GitHub/py-vector/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
